--- a/style.css
+++ b/style.css
@@ -13,3 +13,15 @@ body
   position: relative;
   overflow: hidden;
 }
+
+#grid
+{
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(350px,1fr)); 
+grid-auto-rows: 350px;
+gap: 5px;
+height: 100vh;
+overflow-y: scroll;
+padding-right: 10px;
+grid-auto-flow: dense;
+}
