--- a/style.css
+++ b/style.css
@@ -36,3 +36,25 @@ grid-auto-flow: dense;
 {
   background-color: #757575;
 }
+
+.grid-item
+{
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.grid-img /*работа с изображением, сохр.его пропорции*/
+{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: transform 0.2 ease;
+}
+
+.grid-item:hover
+{
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(0,0,0,0.6);
+}
